# doctest_stringify_test

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  doctest_to_string_test.cpp
approval_tests/: doctest_to_string_test.doctest__toString.approved.txt
libs/doctest_stl_stringifier/: CMakeLists.txt
libs/doctest_stl_stringifier/include/: stl_stringifier.h
